feat: add create and update vac functionality
