# apps/overige-objecten-api/src/routers/objects/index.ts
@@ -1,9 +1,15 @@
 import express from 'express';
-import { getAllObjectsController, getObjectByUUIDController } from '../../controllers';
+import {
+  createVacController,
+  getAllObjectsController,
+  getObjectByUUIDController,
+  updateVacController,
+} from '../../controllers';
 
 const router = express.Router({ mergeParams: true });
 
 router.get('/objects', getAllObjectsController);
 router.get('/objects/:uuid', getObjectByUUIDController);
-
+router.post('/objects', createVacController);
+router.put('/objects/:uuid', updateVacController);
 export default router;
